assets/css/index.css
/* ... */
.scroll-header .lang__menu option {
  background-color: #fff; /* Fondo oscuro */
  color: #333333; /* Texto blanco */
}

.dark-theme .scroll-header .lang__menu{
  padding: 0.5rem;
  background-color: #333333; 
  border: 1px solid #5a5a5a; 
  border-radius: 0.5rem; 
  color: #fff; 
  font-size: var(--smaller-font-size);
  cursor: pointer;
  appearance: none; 
  width: 100%;
  text-align: center;
  transition: 0.3s;
}

@media screen and (max-width: 1024px) {
  .nav__menu {
    position: fixed;
    bottom: 2rem;
    background-color: var(--container-color);
    box-shadow: 0 8px 24px hsla(106, 64%, 24%, 0.15);
    width: 90%;
    left: 0;
    right: 0;
    margin: 0 auto;
    padding: 1rem 1.5rem;
    border-radius: 1.25rem;
    transition: 0.4s;
  }
  .nav__list {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
  }
  .nav__link {
    color: var(--text-color);
    display: flex;
    padding: 0.5rem;
  }

  .nav__link i {
    font-size: 1.25rem;
  }
  .nav__link span {
    display: none;
  }
}
/* Change background header */
.scroll-header {
  background-color: var(--body-color);
  box-shadow: 0 1px 4px hsla(106, 4%, 15%, 0.15);
}

.scroll-header .nav__logo {
  color: #131313;
}

.scroll-header .nav__logo:hover {
  color: hsl(0, 0%, 42%);
}

.scroll-header .change-theme {
  color: #131313;
}

.dark-theme .scroll-header {
  background-color: hsl(0, 0%, 6%);
}

.dark-theme .scroll-header .nav__logo,
.dark-theme .scroll-header .change-theme {
  color: #fff;
}

.dark-theme .scroll-header .nav__logo:hover,
.dark-theme .scroll-header .change-theme:hover {
  color: #c4c4c4;
}
/* Active link */
.active-link {
  background: linear-gradient(
    0deg,
    hsla(101, 59%, 46%, 0.877),
    hsl(101, 66%, 40%)
  );
  color: var(--body-color);
  border-radius: 50rem;
  box-shadow: 0 4px 8px hsla(101, 59%, 46%, 0.25);
}
/*=============== HOME ===============*/
.home {
  background: linear-gradient(
    170deg,
    hsl(110, 12%, 20%) 0%,
    hsl(0, 0%, 6%) 40%
  );
  padding-bottom: 0;
}

.home__container {
  padding-top: 4rem;
  row-gap: 3.5rem;
}

.home__title,
.home__value-number {
  color: var(--first-color-lighten);
}

.home__value-number {
  min-width: 110px;
}

.dark-theme .home__title,
.dark-theme .home__value-number {
  color: var(--first-color-light);
}

.home__title {
  font-size: var(--biggest-font-size);
  line-height: 120%;
  margin-bottom: 1.25rem;
}

.home__description {
  color: var(--text-color-light);
  margin-bottom: 2rem;
}

.home__value {
  display: flex;
  column-gap: 2.5rem;
}

.home__value-number {
  font-size: var(--h1-font-size);
  font-weight: var(--font-medium);
}

.home__value-number span {
  color: var(--second-color);
}

.home__value-description {
  display: flex;
  color: var(--text-color-light);
  font-size: var(--smaller-font-size);
}

.home__images {
  position: relative;
  display: flex;
  justify-content: center;
}

.home__orbe {
  width: 265px;
  height: 284px;
  background: linear-gradient(
    180deg,
    hsl(0, 0%, 16%) 93%,
    hsl(0, 0%, 70%) 100%
  );
  border-radius: 135px 135px 0 0;
}

.dark-theme .home__orbe {
  background: linear-gradient(
    180deg,
    hsl(0, 0%, 15%) 93%,
    hsl(0, 0%, 22%) 100%
  );
}
.home__img {
  position: absolute;
  width: 250px;
  height: 300px;
  overflow: hidden;
  border-radius: 125px 125px 12px 12px;
  display: inline-flex;
  align-items: flex-end;
  bottom: -1.5rem;
  box-shadow: 0 16px 25px hsla(228, 67%, 8%, 0.25);
}
/*=============== BUTTON ===============*/
.button {
  display: inline-block;
  background: linear-gradient(101deg, hsl(106, 57%, 37%), hsl(101, 100%, 20%));
  color: var(--body-color);
  padding: 14px 28px;
  border-radius: 0.5rem;
  font-size: var(--normal-font-size);
  font-weight: var(--normal-font-size);
  box-shadow: 0 4px 8px hsla(228, 67%, 8%, 0.25);
  cursor: pointer;
  transition: 0.3s;
}

.button:hover {
  box-shadow: 0 4px 8px hsla(228, 67%, 8%, 0.25);
}

.nav__button {
  display: none;
}
/*=============== LOGOS ===============*/

/*=============== BEDROOM ===============*/
.bedroom__container {
  padding: 1rem 0 5rem;
}

.bedroom__card {
  width: 310px;
  background-color: var(--container-color);
  padding: 0.65rem 0.65rem 1.5rem;
  border: 2px solid var(--border-color);
  border-radius: 1rem;
  margin: 0 auto;
  transition: 0.4s;
}

.bedroom__img {
  border-radius: 0.75rem;
  margin-bottom: 1rem;
}

.bedroom__data {
  padding: 0 1rem 0 0.5rem;
}

.bedroom__price {
  font-size: var(--h2-font-size);
  color: var(--text-color);
  margin-bottom: 0.25rem;
}

.bedroom__price span {
  color: var(--second-color);
}
.bedroom__title {
  font-size: var(--h3-font-size);
  margin-bottom: 0.75rem;
}

.bedroom__description {
  font-size: var(--small-font-size);
}

.bedroom__card:hover {
  box-shadow: 0 12px 16px hsla(105, 66%, 18%, 0.15);
}
/* Swiper class */
.swiper-button-prev::after,
.swiper-button-next::after {
  content: "";
}

.swiper-button-next,
.swiper-button-prev {
  top: initial;
  bottom: 0;
  width: initial;
  height: initial;
  background-color: var(--container-color);
  border: 1px solid var(--text-color-light);
  border-radius: 0.5rem;
  padding: 6px;
  font-size: 1.5rem;
  color: var(--first-color);
  transition: 0.4s;
}

.swiper-button-prev {
  left: calc(50% - 3rem);
}

.swiper-button-next {
  right: calc(50% - 3rem);
}
/*=============== VALUE ===============*/
.value__container {
  row-gap: 3rem;
}

.value__images {
  position: relative;
  display: flex;
  justify-content: center;
}

.value__imag-2 {
  display: none;
}

.value__orbe {
  width: 266px;
  height: 316px;
  background-color: hsl(106, 24%, 97%);
  border-radius: 135px 135px 16px 16px;
}

.value__img {
  position: absolute;
  width: 250px;
  height: 300px;
  overflow: hidden;
  border-radius: 125px 125px 12px 12px;
  inset: 0;
  margin: auto;
  box-shadow: 0 16px 32px hsla(228, 67%, 25%, 0.25);
}

.value__description {
  font-size: var(--small-font-size);
  margin-bottom: 2rem;
}
/* ... */

